# libimgprocess

./: CMakeLists.txt  ffmpeg_cmd.txt
cmake/: Debug.cmake  Release.cmake
lib/: CMakeLists.txt
lib/include/: img_common.h  img_generic_queue.h  img_resize.h
lib/include /: img_common.h  img_cvt.h  img_resize.h
lib/source/: common.c  img_generic_queue.c  resize.c
test/: main.c
